[tool.poetry]
name = "graduated-m6-dashboard"
version = "0.1.0"
description = ""
authors = ["babebp <tpacharawut@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.17.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
